--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "resources",
     "tools"
   ],
-  "author": {
-    "name": "Chris Monteferrante",
-    "email": "chris@spellboundar.com",
-    "url": ""
+  "author": "Chris Monteferrante <chris@spellboundar.com>",
+  "type": "tool",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SpellBoundAR-Packages/resource-utilities.git"
   },
-  "type": "tool"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/SpellBoundAR-Packages/resource-utilities/issues"
+  },
+  "homepage": "https://github.com/SpellBoundAR-Packages/resource-utilities#readme"
 }
